0.34 2019-07-17
    - [bugfix] Ignore min:max order in distance operators
      (#67; diewald)
    - [feature] Support #COND() operator alias in C2 (#70; diewald)

0.33 2019-02-20
    - Added debug flags (margaretha)
    - [bugfix] Fixed poliqarp layer bug (#52; margaretha)
    - Replaced log4j with log4j2 (margaretha)
    - Fixed issue #43 - C2 OPIN (margaretha)
    - [bugfix] Flatten serialization of query errors (diewald, margaretha) 
    - Fixed OPOV and added range in OPOV grammar (margaretha)
    
0.32 2018-12-13
    - [bugfix] Support verbatim string queries (#57; diewald).

0.31 2018-10-31
    - [bugfix] Security upgrade of Jackson for CVE-2017-17485 and
      CVE-2018-7489 (diewald)
    - [bugfix] OpenJDK8u181-workaround (see Debian Bug report #911925)
      (diewald)

0.30 2018-10-09
    - Introduced docGroupRef and added VC reference in collection query
      (margaretha)
    - Fixed checking error in QuerySerializer (margaretha)

0.29 2018-07-23
    - Added check for errors on QuerySerializer object (diewald)
    - Support verbatim string values in Poliqarp
      (fixes #42; diewald)
    - Fix support for verbatim string values in collection queries
      (diewald)
    - Added hint to update the library (diewald)

0.28 2018-01-10
    - Added some enums for koral:operation (margaretha)
    - Fixed node serialization of Annis QL containing lemma (margaretha)
    - Added serialization for Annis keyword "lemma" (margaretha)
    - Removed version from FCSQL processor (margaretha)
    - Fixed Annis regex bug regarding slash after foundry (margaretha)
    - Fixed use of regular expressions in corpus queries
      (margaretha, diewald)
    - Fixed treatment of 'AND' and 'and' in vc serialization (diewald)
    
0.27 2017-09-12
    - Changed Cosmas2 wildcards serialization as regex (margaretha)  
    - Fixed OP IN with classRefCheck.INCLUDES (margaretha)
    - Implemented OP PV with exclusion (margaretha)
    
0.26 2017-06-29