@@ -2,6 +2,8 @@
     - [bugfix] Ignore min:max order in distance operators
       (#67; diewald)
     - [feature] Support #COND() operator alias in C2 (#70; diewald)
+    - [bugfix] Fixed the distance serialization in CQL boolean queries
+      (#69; margaretha)
 
 0.33 2019-02-20
     - Added debug flags (margaretha)
